--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vicons/antd": "^0.12.0",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "echarts": "^5.5.0",
     "lodash-es": "^4.17.21",
     "md-editor-v3": "^4.19.1",
